Add Create+Build tests for additional templates under .NET kind
* Added tests for Library, Portable Library, Gtk# 2.0 and NUnit Project
* Renamed SimpleTest.cs to CreateBuildTemplatesTest.cs

--- a/main/tests/UserInterfaceTests/UserInterfaceTests.csproj
+++ b/main/tests/UserInterfaceTests/UserInterfaceTests.csproj
@@ -45,10 +45,10 @@
     <Compile Include="UITestBase.cs" />
     <Compile Include="TestService.cs" />
     <Compile Include="Util.cs" />
-    <Compile Include="SimpleTest.cs" />
     <Compile Include="ProcessUtils.cs" />
     <Compile Include="Gui.cs" />
     <Compile Include="Ide.cs" />
+    <Compile Include="CreateBuildTemplatesTest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
