--- a/main/tests/UserInterfaceTests/UserInterfaceTests.csproj
+++ b/main/tests/UserInterfaceTests/UserInterfaceTests.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Ide.cs" />
     <Compile Include="CreateBuildTemplatesTestBase.cs" />
     <Compile Include="MonoDevelopTemplatesTest.cs" />
+    <Compile Include="NewProjectController.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
