--- a/main/tests/UserInterfaceTests/UserInterfaceTests.csproj
+++ b/main/tests/UserInterfaceTests/UserInterfaceTests.csproj
@@ -79,6 +79,7 @@
     <Compile Include="DialogTests\NuGetDialogTests.cs" />
     <Compile Include="Exceptions\TemplateSelectionException.cs" />
     <Compile Include="Exceptions\CreateProjectException.cs" />
+    <Compile Include="Workbench.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
