[UITests] Added Git StashManager tests and fixed other tests
* Test for "Remove" stash from StashManager
* Test for "Apply" stash from StashManager
* Test for "Apply and Remove" stash from StashManager
* Enable EditGitRemoteTest as the test is okay, it found a bug

--- a/main/tests/UserInterfaceTests/UserInterfaceTests.csproj
+++ b/main/tests/UserInterfaceTests/UserInterfaceTests.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Exceptions\TemplateSelectionException.cs" />
     <Compile Include="Exceptions\CreateProjectException.cs" />
     <Compile Include="Workbench.cs" />
+    <Compile Include="VersionControlTests\GitStashManagerTests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
